# daily-construction-progress-report

./: .gitignore  Cargo.toml  FIELDS.md  README.md  index.html  style.css
.github/workflows/: deploy.yml
css/: style.css
js/: app.js  form-build.js
src/: app.rs  lib.rs  metrics.rs  model.rs  pdf.rs  template_model.json
tests/: sample_data.json
