[package]
name = "dcpr"
version = "0.1.0"
edition = "2021"
description = "Daily Construction Progress Report: Rust/WASM static form with vector PDF export"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22"
pdf-writer = "0.13"
serde_json = "1"

# wasm-only dependencies (the host `cargo test` build skips these)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "Document", "Window", "Element", "HtmlElement", "HtmlInputElement",
  "HtmlTextAreaElement", "HtmlSelectElement", "HtmlAnchorElement",
  "Event", "EventTarget", "NodeList", "Node", "Blob", "BlobPropertyBag",
  "Url", "Storage", "File", "FileList", "FileReader", "HtmlButtonElement",
  "ProgressEvent",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
